--- a/.env
+++ b/.env
@@ -33,7 +33,7 @@ MAIL_PORT=2525
 MAIL_USERNAME=4e130c41f03a83
 MAIL_PASSWORD=45028a146e3781
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=null
+MAIL_FROM_ADDRESS=amontazeri53@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
